manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-blog-nginx-ingress
spec:
  rules:
    - host: yanqiw.cn
      http:
        paths:
          - backend:
              serviceName: my-blog
              servicePort: 80
            path: /
    - host: blog.yanqiw.cn 
      http:
        paths:
          - backend:
              serviceName: my-blog
              servicePort: 80
            path: /
